<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:weightSum="10">
        <TextView
            android:id="@+id/tv_rank_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:textSize="@dimen/_12sdp"
            android:text="@string/rank_name"/>

        <TextView
            android:id="@+id/tv_rank_accept_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:textSize="@dimen/_12sdp"
            android:text="@string/str_accept_rank_time"/>

        <TextView
            android:id="@+id/tv_rank_accept_next_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:textSize="@dimen/_12sdp"
            android:text="@string/str_accept_next_rank_time"/>
    </LinearLayout>
</LinearLayout>
