<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.HistoryRankActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/lo_title_rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:paddingTop="2dp"
            android:paddingBottom="4dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:background="@color/md_blue_grey_600"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/md_white"
                android:text="@string/rank_name"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/md_white"
                android:text="@string/str_accept_rank_time"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/md_white"
                android:text="@string/str_accept_next_rank_time"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@id/rcvDanhSach"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>


    </LinearLayout>
    <TextView
        android:background="@color/textColorWhite"
        android:visibility="gone"
        android:id="@id/lo_null"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/str_chua_co_mo_ta"
        />
</android.support.constraint.ConstraintLayout>