<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/textColorWhite"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardElevation="5dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_12dp"
        android:paddingTop="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/tv_label_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:paddingLeft="4dp"
                android:textColor="@color/md_black"
                android:text="@string/str_noi_dung" />

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:paddingRight="@dimen/padding_12dp"
                tools:text="Tặng điểm cho hội viên" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/tv_label_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:paddingLeft="4dp"
                android:textColor="@color/md_black"
                android:text="@string/tr_so_diem" />

            <TextView
                android:id="@+id/tv_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:paddingRight="@dimen/padding_12dp"
                tools:text="15P" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/tv_label_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:paddingLeft="4dp"
                android:textColor="@color/md_black"
                android:text="@string/str_address" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:paddingRight="@dimen/padding_12dp"
                tools:text="Hà Nội" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/tv_label_date_transfer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:paddingLeft="4dp"
                android:textColor="@color/md_black"
                android:text="@string/str_date_transfer" />

            <TextView
                android:id="@+id/tv_date_transfer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:paddingRight="@dimen/padding_12dp"
                tools:text="29/6/2018" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>