<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">
    <!--loading custom-->
    <include
        android:visibility="gone"
        layout="@layout/progressbar_loading"/>

    <LinearLayout
        android:background="@mipmap/ic_bg_top_uudai"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <LinearLayout
            android:id="@+id/loToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null"
            android:orientation="horizontal">

            <ImageView
                android:id="@id/btnBack"
                android:layout_width="@dimen/img_back"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="@dimen/padding_12dp"
                android:src="@drawable/ic_keyboard_arrow_left_white_36dp"
                android:contentDescription="@string/str_back" />

            <TextView
                android:id="@+id/text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Quên Mật Khẩu"
                android:textColor="@color/textColorWhite"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="@dimen/img_back"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                tools:src="@drawable/ic_keyboard_arrow_left_white_36dp"
                android:contentDescription="@string/str_back" />
        </LinearLayout>

        <TextView
            android:id="@+id/font_gioithieu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_52dp"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_32dp"
            android:paddingRight="@dimen/padding_32dp"
            android:text="@string/tv_quen_mat_khau"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/textSize_14sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:background="@android:color/background_light"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:lines="1"
                    android:singleLine="true"
                    android:id="@id/txtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_12dp"
                    android:layout_marginRight="@dimen/padding_12dp"
                    android:layout_marginTop="@dimen/padding_12dp"
                    android:backgroundTint="@android:color/background_light"
                    android:hint="Tên đăng nhập/ Email/ Điện thoại"
                    android:textSize="@dimen/textSize_16sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="@dimen/padding_12dp"
                    android:layout_marginRight="@dimen/padding_12dp"
                    android:background="@color/tab_border" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/padding_12dp"
                    android:layout_marginRight="@dimen/padding_12dp"
                    android:layout_marginTop="@dimen/padding_12dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:background="@android:drawable/bottom_bar"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_capcha"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:contentDescription="@string/str_captcha" />
                    </LinearLayout>
                    <!--<ImageView-->
                    <!--android:id="@+id/img_capcha"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:scaleType="fitCenter"-->
                    <!--android:background="@color/md_grey_200"-->
                    <!--tools:src="@android:drawable/bottom_bar"-->
                    <!--android:contentDescription="@string/str_captcha" />-->

                    <ImageView
                        android:id="@+id/imv_refresh_capcha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:tint="@color/color_chua_chon"
                        android:src="@drawable/ic_cached_white_48dp"
                        android:contentDescription="@string/str_refresh" />
                </LinearLayout>

                <EditText
                    android:lines="1"
                    android:singleLine="true"
                    android:id="@id/txtCapcha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_12dp"
                    android:layout_marginRight="@dimen/padding_12dp"
                    android:layout_marginTop="@dimen/padding_12dp"
                    android:backgroundTint="@android:color/background_light"
                    android:hint="@string/str_nhap_capcha"
                    android:textSize="@dimen/textSize_16sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="@dimen/padding_12dp"
                    android:layout_marginRight="@dimen/padding_12dp"
                    android:background="@color/tab_border" />

                <Button
                    android:id="@id/btnYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/padding_12dp"
                    android:layout_marginTop="@dimen/padding_32dp"
                    android:background="@drawable/bg_btn_tap"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp"
                    android:text="@string/dong_y"
                    android:textColor="@color/textColorWhite"
                    android:textSize="@dimen/textSize_16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>






</LinearLayout>